--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 </head>
 <body>
 <!-- HTML content -->
-<h1>I dont know what to do  I HATE MYSELF</h1>
+<h1>IT IS GOOD</h1>
 <p id="message">This message is updated using JavaScript.</p>
 
 <script>
