--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 </head>
 <body>
 <!-- HTML content -->
-<h1>ANA`S WEBSITE!!!</h1>
+<h1>ANA`S WEBSITE!</h1>
 <p id="message">This message is updated using JavaScript.</p>
 
 <script>
