--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   // JavaScript code
   document.addEventListener("DOMContentLoaded", function() {
     // Update message content
-    document.getElementById("message").textContent = "JavaScript is working, Is it?!";
+    document.getElementById("message").textContent = "JavaScript is working correctly?!";
   });
 </script>
 </body>
